# ChangeLog for app-emulation/xen-tools
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.12 2006/06/09 17:59:12 chrb Exp $

*xen-tools-3.0.2-r1 (09 Jun 2006)

  09 Jun 2006; Chris Bainbridge <chrb@gentoo.org> -xen-tools-3.0.2.ebuild,
  +xen-tools-3.0.2-r1.ebuild:
  Clean up .pyc files, thanks to Andrew Ross, bug #136159

  02 Jun 2006; Roy Marples <uberlord@gentoo.org>
  +files/xen-tools-3.0.2--as-needed.patch, -xen-tools-3.0.1.ebuild,
  -xen-tools-3.0.1_p9029.ebuild, xen-tools-3.0.2.ebuild:
  Add patch to enable --as-needed LDFLAG, #135145

  26 Apr 2006; Aron Griffis <agriffis@gentoo.org> xen-tools-3.0.1.ebuild,
  xen-tools-3.0.1_p9029.ebuild, xen-tools-3.0.2.ebuild:
  Remove ~ia64 since this ebuild deps on app-emulation/xen, which won't have
  ia64 keywords for a while yet

  11 Apr 2006; <chrb@gentoo.org> +files/hardened-bx-clobber.patch,
  xen-tools-3.0.2.ebuild:
  add hardened patch and IUSE flag, #129491

  10 Apr 2006; <chrb@gentoo.org> xen-tools-3.0.2.ebuild:
  Fix hardened flags for hvmloader and vmxassist, #129491

  10 Apr 2006; <chrb@gentoo.org> xen-tools-3.0.2.ebuild:
  removed the hardened stripping flags - now that the hypervisor is split out,
  the tools should be compilable with hardened flags. There is currently a bug
  with register clobbering which has been filed at bugzilla.xensource.com #609

  10 Apr 2006; <chrb@gentoo.org> xen-tools-3.0.2.ebuild:
  add some extra man pages, #129189

  10 Apr 2006; <chrb@gentoo.org> xen-tools-3.0.2.ebuild:
  remove sed fix, #129429

  10 Apr 2006; <chrb@gentoo.org> files/digest-xen-tools-3.0.2, Manifest:
  new digest

*xen-tools-3.0.2 (09 Apr 2006)

  09 Apr 2006; <chrb@gentoo.org> +xen-tools-3.0.2.ebuild:
  bump, #129191

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> xen-tools-3.0.1.ebuild,
  xen-tools-3.0.1_p9029.ebuild:
  Add warning regarding dev-lang/python built without USE=ncurses #128175
