@@ -27,10 +27,14 @@ EBUILD xen-tools-3.0.2-r1.ebuild 3790 RMD160 6de97a5ae04cc5368376f88d458070c097f
 MD5 d1ae3c3fbb8ba67b839d2484811c2c34 xen-tools-3.0.2-r1.ebuild 3790
 RMD160 6de97a5ae04cc5368376f88d458070c097f61f7f xen-tools-3.0.2-r1.ebuild 3790
 SHA256 7edf5561b6902c1a809715849c3bf8fb4f790d794d4dde76a3d9d90f143d6ff8 xen-tools-3.0.2-r1.ebuild 3790
-MISC ChangeLog 2586 RMD160 6b0e34b8714ddb4b5e8e55d3ccecae61aabd7d35 SHA1 6246240351214c25316fcee57c1be3de0c318571 SHA256 50dcba86747d77347ab1060fe430e89cf35a27fb452a3491f49c8e091ae21938
-MD5 edddf102935c317a911cd902e9cbcdd1 ChangeLog 2586
-RMD160 6b0e34b8714ddb4b5e8e55d3ccecae61aabd7d35 ChangeLog 2586
-SHA256 50dcba86747d77347ab1060fe430e89cf35a27fb452a3491f49c8e091ae21938 ChangeLog 2586
+EBUILD xen-tools-3.0.2-r2.ebuild 4299 RMD160 17e8b5e04a3e990a1e3625be8fba8061a5ac639a SHA1 0e69035f277b04038d4a10acf41df67dcf2c2f31 SHA256 ee69ecb468a22c0a8156349559724f2914f2e99ea8cc06e864f27aa8fdfccf45
+MD5 8c866ff645e665a8fd13f4602342d38c xen-tools-3.0.2-r2.ebuild 4299
+RMD160 17e8b5e04a3e990a1e3625be8fba8061a5ac639a xen-tools-3.0.2-r2.ebuild 4299
+SHA256 ee69ecb468a22c0a8156349559724f2914f2e99ea8cc06e864f27aa8fdfccf45 xen-tools-3.0.2-r2.ebuild 4299
+MISC ChangeLog 2789 RMD160 329b1c97b112c0de9c5025eb9c5d2679dbf2f0d2 SHA1 1d1bcc0e76f5d80b24269af604ec4de84bd680d5 SHA256 946a05115290ff5095470a7d66e1f3b16a4565a82f184824aaf24592b533b69c
+MD5 fc2aca30469f5a0fbc123e1ff6fff1b7 ChangeLog 2789
+RMD160 329b1c97b112c0de9c5025eb9c5d2679dbf2f0d2 ChangeLog 2789
+SHA256 946a05115290ff5095470a7d66e1f3b16a4565a82f184824aaf24592b533b69c ChangeLog 2789
 MISC metadata.xml 344 RMD160 237bf24416240057f09b2180e143579e22a24859 SHA1 da9f05207fa34cf639558c4d49b8f1e1dc9bf45f SHA256 79ddf2debe775cd0465984dd0d1e706e7b967b0590a3e36aba5b13239586272f
 MD5 1345a3b29c0fde61a34873dae98c7f34 metadata.xml 344
 RMD160 237bf24416240057f09b2180e143579e22a24859 metadata.xml 344
@@ -38,3 +42,6 @@ SHA256 79ddf2debe775cd0465984dd0d1e706e7b967b0590a3e36aba5b13239586272f metadata
 MD5 6618adc624bc8ab64af0f4555c33529a files/digest-xen-tools-3.0.2-r1 235
 RMD160 ad3a1d2a82c40b0bca653431c2d7964809580e5e files/digest-xen-tools-3.0.2-r1 235
 SHA256 274536fc8a3cb10fda114e533062b0dbddcda4ae15f52033a39b85785b221794 files/digest-xen-tools-3.0.2-r1 235
+MD5 6618adc624bc8ab64af0f4555c33529a files/digest-xen-tools-3.0.2-r2 235
+RMD160 ad3a1d2a82c40b0bca653431c2d7964809580e5e files/digest-xen-tools-3.0.2-r2 235
+SHA256 274536fc8a3cb10fda114e533062b0dbddcda4ae15f52033a39b85785b221794 files/digest-xen-tools-3.0.2-r2 235
