@@ -1,6 +1,13 @@
 # ChangeLog for app-emulation/xen-tools
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.12 2006/06/09 17:59:12 chrb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.13 2006/08/04 13:53:26 chrb Exp $
+
+*xen-tools-3.0.2-r2 (04 Aug 2006)
+
+  04 Aug 2006; Chris Bainbridge <chrb@gentoo.org>
+  +xen-tools-3.0.2-r2.ebuild:
+  Add support for vnc and sdl - thanks to Nick Devito and Andrew Ross in bug
+  #124361
 
 *xen-tools-3.0.2-r1 (09 Jun 2006)
 
